samples/_failures_safe/1761618298_09c301_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0c830e79.c: In function ‘main’:
./samples/SAFE/__tmp_0c830e79.c:200: error: expected ‘]’ at end of input
./samples/SAFE/__tmp_0c830e79.c:199:5: error: expected declaration or statement at end of input
  199 |     Token tokens[MAX_TOKENS
      |     ^~~~~
